# CPP-PROJECT

./: Dockerfile  README.md  requirements.txt  update_ip.py
.github/workflows/: deploy.yml
SNS/: main.py  sns_manager.py
SQS/: sqs.py
backend/: .env.docker  requirements.txt
backend/api/: admin.py  inventory_stock_sqs.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_rename_change_type_inventory_status_and_more.py  0003_shipment.py  0004_alter_supplier_contact_phone.py  0005_alter_product_category.py  0006_notification_alter_purchaseorder_status.py  0007_notification_notes.py  0008_alter_notification_batch_id_and_more.py  0009_alter_notification_batch_id.py  0010_customer_order_orderitem_salesorder_shipmentorder.py
backend/crud/: settings.py  urls.py
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/components/: Form.js  Home.js  Inventory.js  Login.js  LoginForm.js  Navbar.js  Notifications.js  Products.js  ProtectedRoute.jsx  PurchaseOrder.js  Register.js  Shipments.js  Shippments.js  Suppliers.js
frontend/src/components/Forms/: LoginForm.js  MyDatePickerField.js  MyMultilineField.js  MySelectField.js  (+1 more)
inventory_optimizer/: pyproject.toml
my_lamda_functions/: lambda_function.py  s3_lambda_function.py  s3_manager_package_nci_23384069-1.0.0-py3-none-any.whl  sns_check_stock_expiry_lambda_function.py  sns_check_stock_level_lambda_function.py  sns_stock_expiry_lambda_function.py  sns_stock_level_lambda_function.py
s3_manager/: README.md  pyproject.toml
