[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3_manager_package_nci_23384069"
version = "1.0.1"
authors = [
  { name="Ikenna Ughanze", email="ughanzepolycarp@gmail.com" },
]
description = "An AWS s3 utility package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ughanze23/CPP-PROJECT/tree/main/s3_manager"
